# garden-protector

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHARTER.md  LICENSE  Makefile  README.md  constraints.txt  package-lock.json  package.json  pytest.ini
.githooks/: pre-commit
backend/: Cargo.toml  fastly.toml  rust-toolchain.toml
backend/src/: admin.rs  alarms.html  alarms.rs  alert.rs  archive.rs  auth.rs  contract_gen.rs  dashboard.html  event.html  help.html  inference.rs  main.rs  routes.rs  safety.rs  sigv4.rs  timelapse.html  util.rs
contract/: gen.py  spec.toml
deploy/: README.md  garden-camera.service  garden-gateway.service  garden-portal.service  garden-update.service  install.sh  restart.sh  update.sh
docs/: architecture.md  endpoint-contract.md  hardware-architecture.md  hardware-reference.md  pi-setup.md  simulation-and-console.md
firmware/: README.md  node_c3.py
hardware/: camera_daemon.py  camera_probe.py  camera_pusher.py  camera_view.py  cap_listener.py  client.py  costs.html  devices.html  discovery.py  gateway.py  help.html  logs.html  node_sim.py  pi_config.py  portal.py  portal_header.html  requirements-dev.txt  requirements.txt  scenes.py  settings.html  storage.html  sysinfo.py  telemetry.py  telemetry_view.py  timelapse.py  wizard.html
provision/: README.md  __init__.py  auth.py  cli.py  client.py  config.example.json  console.html  console.py  contract_gen.py  cost_rates.py  edge_client.py  envfile.py  fastly_api.py  fos_setup.py  ids.py  orchestrator.py  registry.py  requirements.txt  streaming.py  taxonomy.py  vcl.py  (+1 more)
(+54 files in other folders)
