[package]
name = "garden-protector-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
fastly = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
tract-onnx = "0.23"
time = "0.3.36"
# Pure-Rust HMAC-SHA256 for the best-effort AWS SigV4 evidence-archive PUT to
# Fastly Object Storage (off the fail-closed path). Small + wasm32-wasip1-safe.
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
# Property-based testing for the pure fail-closed / traversal-guard cores
# (rain_should_suppress, archive_image_key_ok). Native `cargo test` only — never
# linked into the wasm32-wasip1 release artifact, so it adds nothing to the edge bundle.
proptest = "1"
